guestbook_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui-v1
  namespace: ingress-nginx
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui-v1
  template:
    metadata:
      labels:
        app: guestbook-ui-v1
    spec:
      containers:
      - image: gcr.io/heptio-images/ks-guestbook-demo:0.1
        name: guestbook-ui-v1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "500Mi"
            cpu: "250m"
          limits:
            memory: "600Mi"
            cpu: "500m"
