guestbook_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui-v2
  namespace: ingress-nginx
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui-v2
  template:
    metadata:
      labels:
        app: guestbook-ui-v2
    spec:
      containers:
      - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
        name: guestbook-ui-v2
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "500Mi"
            cpu: "250m"
          limits:
            memory: "600Mi"
            cpu: "500m"
      nodeSelector:
        cloud.google.com/gke-nodepool: my-node-pool-2
